[package]

name = "call_of_blobby"
version = "0.0.1"
authors = ["adrian"]

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"
[dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics.git"
[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"
[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"
